--- a/package.json
+++ b/package.json
@@ -14,8 +14,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@dotenvx/dotenvx": "^0.44.1",
     "body-parser": "^1.18.3",
-    "express": "^4.16.3"
+    "express": "^4.19.2",
+    "express-validator": "^7.1.0",
+    "mongoose": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^10.0.0",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
