--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "nodemon app.js"
   },
   "repository": {
@@ -27,6 +27,9 @@
     "validator": "^13.12.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.4"
+    "chai": "4.2.0",
+    "mocha": "^10.7.0",
+    "nodemon": "^1.18.4",
+    "sinon": "^18.0.0"
   }
 }
