--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "chai": "4.2.0",
     "mocha": "^10.7.0",
     "nodemon": "^1.18.4",
-    "sinon": "^18.0.0"
+    "sinon": "^18.0.0",
+    "typescript": "^5.5.4"
   }
 }
